--- a/src/components/CardHeader/CardHeader.scss
+++ b/src/components/CardHeader/CardHeader.scss
@@ -26,6 +26,7 @@
 .card-header {
   width: 100%;
   padding: 2rem 1rem 1rem;
+  border-bottom: 1px solid $cloud;
 
   @include tablet {
     border-bottom: 0;
