--- a/src/components/DynamicInput/DynamicInput.scss
+++ b/src/components/DynamicInput/DynamicInput.scss
@@ -40,20 +40,48 @@
         display: flex;
         align-items: center;
         white-space: nowrap;
-        @include dynamicFont(400, .8125rem, 1.25rem, $graphite);
+        @include dynamicFont(400, .8125rem, 1.25rem, $instock-black);
 
         @include tablet {
-            @include dynamicFont(400, .875rem, 1.375rem, $graphite);
+            @include dynamicFont(400, .875rem, 1.375rem, $instock-black);
+        }
+
+        &--active {
+            color: $instock-black;
+
+            &--button {
+                border-color: $instock-black;
+            }
         }
 
         &--inactive {
+            color: $cloud;
+
             @include dynamicFont(400, .8125rem, 1.25rem, $slate);
 
             @include tablet {
                 @include dynamicFont(400, .875rem, 1.375rem, $slate);
             }
+
+            &--button {
+                border-color: $cloud;
+            }
+        }
+
+        &--button {
+            height: 1rem;
+            width: 1rem;
+
+            &-active {
+                border-color: $instock-black;
+            }
+
+            &-inactive {
+                border-color: $cloud;
+            }
         }
     }
+
 
     &__select {
         width: 100%;
